// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`CSS enums definition emits only a variable map, reset class, and root default 1`] = `
{
  "code": "import * as stylex from '@stylexjs/stylex';
export const density = {
  compact: "var(--xnp2bkv-j7rcqr)",
  comfortable: "var(--xnp2bkv-1vrmicz)"
};",
  "css": ":where(.xnp2bkv){--xnp2bkv-j7rcqr: ;--xnp2bkv-1vrmicz: ;}:root:not(.xnp2bkv){--xnp2bkv-j7rcqr: ;--xnp2bkv-1vrmicz:initial;}",
}
`;

exports[`CSS enums imports compile without accessing the defining module 1`] = `
{
  "code": "import * as stylex from '@stylexjs/stylex';
import { density as mode } from './missing.stylex';
export const props = {
  className: "x1cu84p2 x1ox45mc"
};
export const styles = {
  root: {
    kmVPX3: "xo6kdcq",
    kSiTet: "x1w0en5j",
    $$css: true
  }
};",
  "css": ".x1ox45mc{--x1cu84p2-j7rcqr:initial}
.xo6kdcq:not(#\\#){padding:var(--x1cu84p2-j7rcqr,8px) var(--x1cu84p2-1vrmicz,16px)}
.x1w0en5j:not(#\\#):not(#\\#){opacity:var(--x1cu84p2-j7rcqr,.5) var(--x1cu84p2-1vrmicz,1)}",
}
`;

exports[`CSS enums initial at-rules and optional nested defaults 1`] = `
{
  "code": "import { defineEnum } from '@stylexjs/stylex';
export const dark = {
  true: "var(--xpvlfw4-x29cgs)",
  false: "var(--xpvlfw4-1cispiw)"
};",
  "css": ":where(.xpvlfw4){--xpvlfw4-x29cgs: ;--xpvlfw4-1cispiw: ;}:root:not(.xpvlfw4){--xpvlfw4-x29cgs: ;--xpvlfw4-1cispiw:initial;}@media (prefers-color-scheme: dark){:root:not(.xpvlfw4){--xpvlfw4-x29cgs:initial;--xpvlfw4-1cispiw: ;}}@supports (display: grid){@media print{:root:not(.xpvlfw4){--xpvlfw4-x29cgs: ;--xpvlfw4-1cispiw:initial;}}}",
}
`;

exports[`CSS enums property normalization and nested matches: legacy-expand-shorthands 1`] = `
{
  "code": "import * as stylex from '@stylexjs/stylex';
export const density = {
  compact: "var(--xnp2bkv-j7rcqr)",
  comfortable: "var(--xnp2bkv-1vrmicz)"
};
export const styles = {
  root: {
    kLKAdn: "xdl6go4",
    kwRFfy: "x1k3jt8k",
    kGO01o: "x1ucj9h1",
    kZCmMZ: "xan7klt",
    kMwMTN: "xufbky4 x1ehdwse",
    $$css: true
  }
};",
  "css": ":where(.xnp2bkv){--xnp2bkv-j7rcqr: ;--xnp2bkv-1vrmicz: ;}:root:not(.xnp2bkv){--xnp2bkv-j7rcqr: ;--xnp2bkv-1vrmicz:initial;}
.xufbky4:not(#\\#){color:var(--xnp2bkv-j7rcqr,red) var(--xnp2bkv-1vrmicz,blue)}
.x1k3jt8k:not(#\\#){padding-inline-end:var(--xnp2bkv-j7rcqr,12px) var(--xnp2bkv-1vrmicz,16px)}
.xan7klt:not(#\\#){padding-inline-start:var(--xnp2bkv-j7rcqr,12px) var(--xnp2bkv-1vrmicz,16px)}
.x1ehdwse:hover:not(#\\#){color:green}
.x1ucj9h1:not(#\\#):not(#\\#){padding-bottom:var(--xnp2bkv-j7rcqr,8px) var(--xnp2bkv-1vrmicz,16px)}
.xdl6go4:not(#\\#):not(#\\#){padding-top:var(--xnp2bkv-j7rcqr,8px) var(--xnp2bkv-1vrmicz,16px)}",
}
`;

exports[`CSS enums property normalization and nested matches: property-specificity 1`] = `
{
  "code": "import * as stylex from '@stylexjs/stylex';
export const density = {
  compact: "var(--xnp2bkv-j7rcqr)",
  comfortable: "var(--xnp2bkv-1vrmicz)"
};
export const styles = {
  root: {
    kmVPX3: "xr3iirk",
    kMwMTN: "xufbky4 x1ehdwse",
    $$css: true
  }
};",
  "css": ":where(.xnp2bkv){--xnp2bkv-j7rcqr: ;--xnp2bkv-1vrmicz: ;}:root:not(.xnp2bkv){--xnp2bkv-j7rcqr: ;--xnp2bkv-1vrmicz:initial;}
.xr3iirk:not(#\\#){padding:var(--xnp2bkv-j7rcqr,8px 12px) var(--xnp2bkv-1vrmicz,16px)}
.xufbky4:not(#\\#):not(#\\#){color:var(--xnp2bkv-j7rcqr,red) var(--xnp2bkv-1vrmicz,blue)}
.x1ehdwse:hover:not(#\\#):not(#\\#){color:green}",
}
`;

exports[`CSS enums scalar assignments compose under one key 1`] = `
{
  "code": "import * as stylex from '@stylexjs/stylex';
export const density = {
  compact: "var(--xnp2bkv-j7rcqr)",
  comfortable: "var(--xnp2bkv-1vrmicz)"
};
export const props = {
  className: "xnp2bkv xgqg98k"
};",
  "css": ":where(.xnp2bkv){--xnp2bkv-j7rcqr: ;--xnp2bkv-1vrmicz: ;}:root:not(.xnp2bkv){--xnp2bkv-j7rcqr: ;--xnp2bkv-1vrmicz:initial;}
.xgqg98k{--xnp2bkv-1vrmicz:initial}
.x1jbanbc{--xnp2bkv-j7rcqr:initial}",
}
`;
